<resources>
    <string name="app_name">WeebsApp</string>

    <string name="aboutAppText">
        WeebsApp adalah aplikasi Wallpaper berbasis Android. Aplikasi ini dirancang
        untuk memberikan pengalaman penggunaan yang sederhana, cepat, dan efisien. RaamApp
        dikembangkan dengan fokus pada kenyamanan, performa, dan kemudahan pengguna, sehingga
        cocok digunakan oleh berbagai kalangan
    </string>

    <string name="mainFeaturesText">
        \u2022 Search Bar\n\u2022 Apply to Wallpaper\n\u2022 Switch Theme\n
    </string>

    <string name="appPurposeVision">
        \u2022 Visi Aplikasi\n
        Menjadi platform wallpaper yang menghadirkan visual berkualitas tinggi untuk
        mempercantik perangkat dan mengekspresikan karakter setiap pengguna\n\n
        \u2022 Tujuan aplikasi\n
        Menyediakan koleksi Wallpaper yang beragam, mudah diakses, dan selalu diperbarui
        agar pengguna dapat menemukan tampilan yang sesuai dengan gaya dan suasana mereka
    </string>

    <string name="aboutDeveloper">
        FrontEnd Developer and Mobile Developer Enthusiast\nBuilding simple, useful and clean mobile experience
    </string>

    <string name="ShortBio">
        I am an Android developer who enjoys building clean, functional, and user-friendly applications.
        I focus on writting simple, maintainable code while continuously learning modern Android development
        pratices
    </string>

    <string name="FavQuote">
        Whatever you are, be the good one.
    </string>

    <string name="AuthorQuote">
        - Abraham Lincoln
    </string>

    <string name="devTechStack">
        \u2022 HTML\n\u2022 CSS\n\u2022 Javascript\n\u2022 Java\n\u2022 Python\n\u2022 PHP
    </string>

    <string name="thisAppExist">
        This application was developed as a final project for my Mobile Progamming course.
        It is designed to be simple and visually aesthetic, allowing users to explore and
        experience the application in a clear, comfortable, and engaging way
    </string>

    <string name="privacy_policy_text">
        WeebsApp respect your privacy. This application does not collect, store, or share any personal user data.
        All wallpapers and application data are stored locally on the user's device. WeebsApp only request permissions that are necessary for its core functionality, such as setting wallpapers.
        We do not use third-party analytics, tracking, or advertising services.
    </string>

    <string name="terms_conditions_text">
        By using WeebsApp, you agree that this application is provided for personal and non-commercial use only.
        All content is intended for educational and demonstration purpose. The developer is not responsible for misuse of the application or its content.
        The application is provided "as is" without any warranties, and features may change at any time.
    </string>
</resources>