<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_aboutDev"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="24dp"
    android:background="#000"
    android:fitsSystemWindows="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">

<!--        Picture-->
<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="150dp"-->
<!--            android:layout_gravity="center"-->
<!--            app:cardCornerRadius="16dp"-->
<!--            app:cardUseCompatPadding="true"-->
<!--            app:cardElevation="6dp">-->

<!--            <ImageView-->
<!--                android:layout_width="150dp"-->
<!--                android:layout_height="150dp"-->
<!--                android:src="@mipmap/ic_launcher_round"-->
<!--                android:layout_gravity="center"/>-->
<!--        </androidx.cardview.widget.CardView>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="About Developer"
            android:paddingTop="12dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <!--Who's Developer Section-->
        <androidx.cardview.widget.CardView
            android:id="@+id/whoAboutDev"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            app:cardElevation="6dp"
            app:cardCornerRadius="13dp"
            app:cardBackgroundColor="#1e1e1e">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="Yohanes Bramanta"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textAlignment="center"/>
            </LinearLayout>

<!--            <View-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:layout_marginTop="40dp"-->
<!--                android:background="#595757"-->
<!--                android:layout_marginLeft="10dp"-->
<!--                android:layout_marginRight="10dp"/>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="13dp"
                android:textColor="@android:color/white"
                android:text="@string/aboutDeveloper"/>
        </androidx.cardview.widget.CardView>

        <!-- Short Bio-->
        <androidx.cardview.widget.CardView
            android:id="@+id/shortBio"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            app:cardElevation="6dp"
            app:cardCornerRadius="13dp"
            app:cardBackgroundColor="#1e1e1e">

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="left"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_marginLeft="10dp">-->

<!--                <TextView-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:text="Main Features"-->
<!--                    android:textColor="@android:color/white"-->
<!--                    android:textSize="16sp"-->
<!--                    android:textAlignment="textStart"/>-->
<!--            </LinearLayout>-->

<!--            <View-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:layout_marginTop="40dp"-->
<!--                android:background="#595757"-->
<!--                android:layout_marginLeft="10dp"-->
<!--                android:layout_marginRight="10dp"/>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:text="@string/ShortBio"/>
        </androidx.cardview.widget.CardView>

        <!-- Tech Stack -->
        <androidx.cardview.widget.CardView
            android:id="@+id/devTechStack"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            app:cardElevation="6dp"
            app:cardCornerRadius="13dp"
            app:cardBackgroundColor="#1e1e1e">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="Main Features"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textAlignment="textStart"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40dp"
                android:background="#595757"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:text="@string/mainFeaturesText"/>
        </androidx.cardview.widget.CardView>

        <!-- Dev Favorite Quote -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            app:cardElevation="6dp"
            app:cardCornerRadius="13dp"
            app:cardBackgroundColor="#1e1e1e">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Favorite Quote"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textAlignment="center"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40dp"
                android:background="#595757"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="16dp"
                android:textAlignment="center"
                android:textStyle="italic"
                android:justificationMode="inter_word"
                android:textColor="@android:color/white"
                android:text="@string/FavQuote"/>
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="18dp"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:text="@string/AuthorQuote"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>