<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_aboutApp"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="0dp"
    android:background="?android:colorBackground"
    android:fitsSystemWindows="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tint="?android:textColorPrimary"
                android:src="@drawable/ic_arrow_back"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:cardCornerRadius="16dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="6dp"
                app:cardBackgroundColor="?attr/colorSurface">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@mipmap/ic_launcher_round"
                    android:layout_gravity="center"/>
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="WeebsApp"
                android:paddingTop="12dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="?android:textColorPrimary"
                android:textStyle="bold"/>

            <!--        About App Section-->
            <androidx.cardview.widget.CardView
                android:id="@+id/menuAboutApp"
                android:layout_width="match_parent"
                android:layout_height="185dp"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="13dp"
                app:cardBackgroundColor="?attr/colorSurface">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:text="About App"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp"
                        android:textAlignment="textStart"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="40dp"
                    android:background="?android:textColorSecondary"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:justificationMode="inter_word"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/aboutAppText"/>
            </androidx.cardview.widget.CardView>


            <!--        Main Features-->
            <androidx.cardview.widget.CardView
                android:id="@+id/mainFeatures"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="13dp"
                app:cardBackgroundColor="?attr/colorSurface">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:text="Main Features"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp"
                        android:textAlignment="textStart"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="40dp"
                    android:background="?android:textColorSecondary"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textAlignment="textStart"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/mainFeaturesText"/>
            </androidx.cardview.widget.CardView>


            <!--        App's purpose-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="185dp"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="13dp"
                app:cardBackgroundColor="?attr/colorSurface">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="App Purpose / Vision"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp"
                        android:textAlignment="textStart"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="40dp"
                    android:background="?android:textColorSecondary"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:justificationMode="inter_word"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/appPurposeVision"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>